// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PriceRanges individual methods getForm should call the PriceRangesForm 1`] = `
<form
  onSubmit={[Function]}
>
  <label>
    <span>
      $
       
    </span>
    <input
      onChange={[Function]}
      type="number"
      value=""
    />
  </label>
  <span>
     
     
  </span>
  <label>
    <span>
      $
       
    </span>
    <input
      onChange={[Function]}
      type="number"
      value=""
    />
  </label>
  <button
    type="submit"
  >
    hello
  </button>
</form>
`;

exports[`PriceRanges individual methods getItemFromFacetValue should display one active range item correctly 1`] = `
<div
  className="item active"
>
  <a
    className="link"
    href="url"
    onClick={[Function]}
  >
    <div
      dangerouslySetInnerHTML={
        Object {
          "__html": "  $",
        }
      }
    />
  </a>
</div>
`;

exports[`PriceRanges individual methods getItemFromFacetValue should display one range item correctly 1`] = `
<div
  className="item"
>
  <a
    className="link"
    href="url"
    onClick={[Function]}
  >
    <div
      dangerouslySetInnerHTML={
        Object {
          "__html": "  $",
        }
      }
    />
  </a>
</div>
`;

exports[`PriceRanges render should have the right number of items 1`] = `
<div>
  <div>
    <div
      className=""
    >
      <a
        onClick={[Function]}
      >
        <div
          dangerouslySetInnerHTML={
            Object {
              "__html": "  ",
            }
          }
        />
      </a>
    </div>
    <div
      className=""
    >
      <a
        onClick={[Function]}
      >
        <div
          dangerouslySetInnerHTML={
            Object {
              "__html": "  ",
            }
          }
        />
      </a>
    </div>
    <div
      className=""
    >
      <a
        onClick={[Function]}
      >
        <div
          dangerouslySetInnerHTML={
            Object {
              "__html": "  ",
            }
          }
        />
      </a>
    </div>
    <div
      className=""
    >
      <a
        onClick={[Function]}
      >
        <div
          dangerouslySetInnerHTML={
            Object {
              "__html": "  ",
            }
          }
        />
      </a>
    </div>
  </div>
  <form
    onSubmit={[Function]}
  >
    <label>
      <span>
         
      </span>
      <input
        onChange={[Function]}
        type="number"
        value=""
      />
    </label>
    <span>
       
       
    </span>
    <label>
      <span>
         
      </span>
      <input
        onChange={[Function]}
        type="number"
        value=""
      />
    </label>
    <button
      type="submit"
    />
  </form>
</div>
`;

exports[`PriceRanges render should wrap the output in a list CSS class 1`] = `
<div>
  <div
    className="list"
  >
    <div
      className=""
    >
      <a
        onClick={[Function]}
      >
        <div
          dangerouslySetInnerHTML={
            Object {
              "__html": "  ",
            }
          }
        />
      </a>
    </div>
    <div
      className=""
    >
      <a
        onClick={[Function]}
      >
        <div
          dangerouslySetInnerHTML={
            Object {
              "__html": "  ",
            }
          }
        />
      </a>
    </div>
    <div
      className=""
    >
      <a
        onClick={[Function]}
      >
        <div
          dangerouslySetInnerHTML={
            Object {
              "__html": "  ",
            }
          }
        />
      </a>
    </div>
    <div
      className=""
    >
      <a
        onClick={[Function]}
      >
        <div
          dangerouslySetInnerHTML={
            Object {
              "__html": "  ",
            }
          }
        />
      </a>
    </div>
  </div>
  <form
    onSubmit={[Function]}
  >
    <label>
      <span>
         
      </span>
      <input
        onChange={[Function]}
        type="number"
        value=""
      />
    </label>
    <span>
       
       
    </span>
    <label>
      <span>
         
      </span>
      <input
        onChange={[Function]}
        type="number"
        value=""
      />
    </label>
    <button
      type="submit"
    />
  </form>
</div>
`;
